--- a/composer.json
+++ b/composer.json
@@ -21,17 +21,20 @@
     "require": {
         "php": "^8.3",
         "encoredigitalgroup/stdlib": "^2",
+        "illuminate/console": "^11|^12",
         "illuminate/support": "^11|^12",
-        "phpgenesis/logger": "1.0",
-        "nikic/php-parser": "^5.4"
+        "nikic/php-parser": "^5.4",
+        "phpgenesis/logger": "1.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.9",
         "larastan/larastan": "^3",
+        "laravel/framework": "^11|^12",
         "neronmoon/scriptsdev": "^0.1.9",
         "orchestra/testbench": "^10",
-        "pestphp/pest": "^3",
-        "pestphp/pest-plugin-laravel": "^3",
+        "pestphp/pest": "^3.8",
+        "pestphp/pest-plugin-drift": "^3.0",
+        "pestphp/pest-plugin-laravel": "^3.2",
         "phpgenesis/devutilities": "^1.0",
         "phpstan/extension-installer": "^1.3",
         "phpstan/phpstan": "^2",
@@ -44,6 +47,11 @@
             "EncoreDigitalGroup\\LaravelDiscovery\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
     "scripts": {},
     "extra": {
         "laravel": {
@@ -54,7 +62,9 @@
         },
         "scripts-dev": {
             "post-update-cmd": [],
-            "post-autoload-dump": []
+            "post-autoload-dump": [
+                "vendor/bin/testbench package:discover"
+            ]
         }
     }
 }
