--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,11 @@
 {
-    "name": "encoredigitalgroup/php-package-template",
+    "name": "encoredigitalgroup/laravel-discovery",
     "type": "library",
+    "license": "BSD-3-Clause",
     "authors": [
         {
             "name": "Marc Beinder",
             "email": "marc.beinder@encoredigitalgroup.com"
-        }
-    ],
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://packages.encoredigitalgroup.com"
         }
     ],
     "config": {
@@ -27,17 +22,21 @@
     "require": {
         "php": "^8.3",
         "encoredigitalgroup/stdlib": "^2",
+        "illuminate/console": "^11|^12",
         "illuminate/support": "^11|^12",
-        "phpgenesis/logger": "^0.3"
+        "nikic/php-parser": "^5.4",
+        "phpgenesis/logger": "1.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.9",
         "larastan/larastan": "^3",
+        "laravel/framework": "^11|^12",
         "neronmoon/scriptsdev": "^0.1.9",
         "orchestra/testbench": "^10",
-        "pestphp/pest": "^3",
-        "pestphp/pest-plugin-laravel": "^3",
-        "phpgenesis/devutilities": "^0.3",
+        "pestphp/pest": "^3.8",
+        "pestphp/pest-plugin-drift": "^3.0",
+        "pestphp/pest-plugin-laravel": "^3.2",
+        "phpgenesis/devutilities": "^1.0",
         "phpstan/extension-installer": "^1.3",
         "phpstan/phpstan": "^2",
         "rector/rector": "^2",
@@ -46,20 +45,27 @@
     },
     "autoload": {
         "psr-4": {
-            "EncoreDigitalGroup\\PackageTemplate\\": "src/"
+            "EncoreDigitalGroup\\LaravelDiscovery\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
         }
     },
     "scripts": {},
     "extra": {
         "laravel": {
             "providers": [
-                "EncoreDigitalGroup\\PackageTemplate\\ServiceProvider"
+                "EncoreDigitalGroup\\LaravelDiscovery\\Providers\\DiscoveryServiceProvider"
             ],
             "dont-discover": []
         },
         "scripts-dev": {
             "post-update-cmd": [],
-            "post-autoload-dump": []
+            "post-autoload-dump": [
+                "vendor/bin/testbench package:discover"
+            ]
         }
     }
 }
