--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "illuminate/console": "^11|^12",
         "illuminate/support": "^11|^12",
         "nikic/php-parser": "^5.4",
-        "phpgenesis/logger": "1.0"
+        "phpgenesis/logger": "^1.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.9",
