--- a/.github/workflows/_release.yml
+++ b/.github/workflows/_release.yml
@@ -6,14 +6,19 @@ on:
             - 'v[0-9]+.[0-9]+.[0-9]+'
             - '!v[0-9]+.[0-9]+.[0-9]+-rc[0-9]+'
 
+permissions:
+    contents: write
+
 jobs:
     CreateRelease:
         name: Create Release
-        uses: EncoreDigitalGroup/ci-workflows/.github/workflows/github_createRelease.yml@v2
-        permissions:
-            contents: write
-        with:
-            generateReleaseNotes: true
-            isDraft: false
-        secrets:
-            token: ${{ secrets.GITHUB_TOKEN }}
+        runs-on: ubuntu-latest
+        steps:
+            -   name: Create Release
+                uses: EncoreDigitalGroup/ci-workflows/actions/github/createRelease@v3
+                with:
+                    generateReleaseNotes: true
+                    isDraft: false
+                    repository: ${{ github.repository }}
+                    tagName: ${{ github.ref_name }}
+                    token: ${{ secrets.GITHUB_TOKEN }}
