--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,15 +1,9 @@
 version: 2
-registries:
-    composer:
-        type: composer-repository
-        url: https://packages.encoredigitalgroup.com
-        username: ${{secrets.ENCOREDIGITAL_PACKAGES_USERNAME}}
-        password: ${{secrets.ENCOREDIGITAL_PACKAGES_PASSWORD}}
 updates:
     -   package-ecosystem: "composer"
         directory: "/"
-        registries:
-            - composer
+        cooldown:
+            default-days: 7
         schedule:
             interval: weekly
             day: wednesday
