--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
     "require": {
         "php": "^8.3",
         "encoredigitalgroup/stdlib": "^2",
-        "illuminate/console": "^11|^12",
-        "illuminate/support": "^11|^12",
+        "illuminate/console": "^11|^12|^13",
+        "illuminate/support": "^11|^12|^13",
         "laravel/prompts": "^0.3.7",
         "nikic/php-parser": "^5.4",
         "phpgenesis/logger": "^1.0"
